--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,33 @@
-@(message: String)
+@()
 
-@main("Welcome to Play 2.0") {
-    
-    @play20.welcome(message)
+@moreScripts = {
+    <script src="@routes.Assets.at("javascripts/todo.js")"></script>
+}
+
+@main("Angular Js Test", moreScripts) {
+
+<div class="row">
+<div class="span8 offset2">
+
+    <h2>Todo</h2>
+
+    <div ng-controller="TodoCtrl">
+
+        <span>{{ remaining() }} of {{todos.length}} remaining</span> [ <a href="" ng-click="archive()">archive</a> ]
+
+        <ul class="unstyled">
+            <li ng-repeat="todo in todos">
+                <input type="checkbox" ng-model="todo.done">
+                <span class="done-{{todo.done}}">{{todo.text}}</span>
+            </li>
+        </ul>
+
+        <form ng-submit="addTodo()">
+            <input type="text" ng-model="todoText" size="30" placeholder="add new todo here">
+            <input class="btn-primary" type="submit" value="add">
+        </form>
+
+    </div>
+</div>
     
 }
