--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -1,13 +1,20 @@
-@(title: String)(content: Html)
+@(title: String, moreScripts: Html = Html(""))(content: Html)
 
 <!DOCTYPE html>
 
-<html>
+<html ng-app>
     <head>
         <title>@title</title>
+
+		<link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap-combined.min.css">
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
+
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+        <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js" type="text/javascript"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
+        @moreScripts
     </head>
     <body>
         @content
