--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,8 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
+        @* load javascript routes and I18n *@
+        <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
         @moreScripts
     </head>
     <body>
