--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -2,7 +2,8 @@
 
 <!DOCTYPE html>
 
-<html ng-app>
+@* Link an Angular module to the element *@
+<html ng-app="todoList">
     <head>
         <title>@title</title>
 
@@ -14,8 +15,11 @@
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/js/bootstrap.min.js" type="text/javascript"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.3/angular.min.js"></script>
-        @* load javascript routes and I18n *@
+        <script src="@routes.Assets.at("javascripts/lib/angular-resource.min.js")"></script>
+
+        @* load javascript routes *@
         <script type="text/javascript" src="@routes.Application.javascriptRoutes"></script>
+
         @moreScripts
     </head>
     <body>
