Fixed testing issues

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,7 +1,7 @@
 @()
 
 @moreScripts = {
-    <script src="@routes.Assets.at("javascripts/todo.js")"></script>
+    <script src="@routes.Assets.at("javascripts/todo.min.js")"></script>
 }
 
 @main("Angular Js Test", moreScripts) {
